--- a/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
+++ b/src/app/search/results/paragraph-dialog/paragraph-dialog.component.html
@@ -6,7 +6,7 @@
   (nzOnCancel)="onHide()"
 >
   <ng-container *nzModalContent>
-    <ks-text-block [text]="getTextWithHighlights()"></ks-text-block>
+    <ks-text-block [text]="data.fmtTextWithHl"></ks-text-block>
 
     <div nz-flex nzJustify="flex-end">
       <button
