--- a/src/styles.less
+++ b/src/styles.less
@@ -68,6 +68,12 @@ body {
   margin: 0 4px;
 }
 
+.page-line {
+  font-size: 0.75rem;
+  font-weight: normal;
+  color: var(--color-dark-grey);
+}
+
 // TODO (same for ks-meta-page): before and after chars are not usable in browser search
 .ks-meta-fnref,
 ks-meta-fnref {
