--- a/src/app/search/results/result-list/result-item/result-item.component.html
+++ b/src/app/search/results/result-list/result-item/result-item.component.html
@@ -16,18 +16,19 @@
       </div>
 
       <div *nzSpaceItem>
-        <ng-container *ngFor="let snippet of hit.snippets">
-          <div nz-row>
-            <div class="page-line" nz-col nzSpan="2">
-              [{{ snippet.page }}:{{ snippet.line }}]
-            </div>
-            <div nz-col nzSpan="22">
-              <ks-text-block
-                [text]="'...' + snippet.text + '...'"
-              ></ks-text-block>
-            </div>
+        @for (snippet of hit.snippets; track `${snippet.page}:${snippet.line}`)
+        {
+        <div nz-row>
+          <div class="page-line" nz-col nzSpan="2">
+            [{{ snippet.page }}:{{ snippet.line }}]
           </div>
-        </ng-container>
+          <div nz-col nzSpan="22">
+            <ks-text-block
+              [text]="'...' + snippet.text + '...'"
+            ></ks-text-block>
+          </div>
+        </div>
+        }
       </div>
     </nz-space>
   </nz-card>
