--- a/src/styles.less
+++ b/src/styles.less
@@ -60,12 +60,12 @@ body {
 .cursor-pointer {
   cursor: pointer;
 }
-.hover-background:hover {
-  background-color: #f0f0f0; /* Light grey */
-  border-radius: 3px;
-}
-.background-inside {
-  margin: 0 4px;
+.hover-background {
+  padding: 0 4px;
+  &:hover {
+    background-color: #f0f0f0; /* Light grey */
+    border-radius: 3px;
+  }
 }
 
 .page-line {
