--- a/src/app/read/text/toc/section/section.component.html
+++ b/src/app/read/text/toc/section/section.component.html
@@ -2,15 +2,17 @@
   [ngStyle]="{ 'padding-left.px': level * 25 }"
   (click)="onClick(section?.heading ?? 0)"
 >
-  <div class="cursor-pointer hover-background">
-    <div class="background-inside" nz-flex nzJustify="space-between">
-      {{ getHeading(section?.heading).tocText }}
+  <div
+    class="cursor-pointer hover-background"
+    nz-flex
+    nzJustify="space-between"
+  >
+    {{ getHeading(section?.heading).tocText }}
 
-      <span style="width: 30px"></span>
+    <span style="width: 30px"></span>
 
-      <div style="white-space: nowrap">
-        {{ getHeading(section?.heading).pages[0] }}
-      </div>
+    <div style="white-space: nowrap">
+      {{ getHeading(section?.heading).pages[0] }}
     </div>
   </div>
 </div>
