--- a/src/app/search/results/results.component.html
+++ b/src/app/search/results/results.component.html
@@ -28,8 +28,9 @@
 </ng-container>
 
 <ks-paragraph-dialog
-  [(isVisible)]="showParagraph"
-  [data]="hit"
+  [isVisible]="showParagraph"
+  (isVisibleChange)="onDialogHide($event)"
+  [hit]="hit"
   (navigateEmitter)="onFullTextNavigation($event)"
 ></ks-paragraph-dialog>
 
