--- a/src/app/search/results/result-list/result-item/result-item.component.html
+++ b/src/app/search/results/result-list/result-item/result-item.component.html
@@ -13,8 +13,8 @@
         <span nz-typography nzType="secondary">
           <i>
             {{
-              hit.work.abbreviation && hit.work.abbreviation !== ""
-                ? hit.work.abbreviation
+              hit.work.siglum && hit.work.siglum !== ""
+                ? hit.work.siglum
                 : ("SEARCH.RESULTS.WORKS." + hit.work.code | translate)
             }}
           </i>
