--- a/src/app/search/criteria/basic-input/basic-input.component.html
+++ b/src/app/search/criteria/basic-input/basic-input.component.html
@@ -31,6 +31,8 @@
         [nzData]="nodes"
         [nzCheckedKeys]="checkedKeys"
         (nzCheckedKeysChange)="onCheckedKeysChange($event)"
+        [nzExpandedKeys]="expandedKeys"
+        (nzClick)="onNodeClick($event)"
       ></nz-tree>
     </ng-container>
   </nz-card>
