add ks-fmt-name styling

--- a/src/styles.less
+++ b/src/styles.less
@@ -183,6 +183,10 @@ ks-fmt-hpar {
   font-style: italic;
   margin: 0 5rem;
 }
+ks-fmt-name {
+  font-family: "Georgia", serif;
+  letter-spacing: 0.03em;
+}
 ks-fmt-tracked {
   letter-spacing: 0.1em;
 }
