move local styles to local .less files

--- a/src/app/read/text/content/footnote/footnote.component.html
+++ b/src/app/read/text/content/footnote/footnote.component.html
@@ -1,6 +1,6 @@
 <div nz-flex nzJustify="center">
   <div class="max-w-footnote-text" id="content-{{ footnote?.ordinal }}">
-    <span class="ks-meta-fnref">{{ footnote?.ref }}</span>
+    <span class="ks-meta-fnref">({{ footnote?.ref }})</span>
 
     <ks-text-block [text]="footnote?.text || ''"></ks-text-block>
   </div>
