--- a/src/styles.less
+++ b/src/styles.less
@@ -27,51 +27,15 @@ body {
   max-width: 500px;
 }
 
-.paragraph-wrapper {
-  position: relative;
-}
-.floating-summary {
-  float: left;
-  font-style: italic;
-  width: 12em;
-  margin-right: 1em;
-}
-.paragraph-wrapper::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.ks-scroll-to-top {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  z-index: 1000;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  opacity: 0.7;
-  transition: opacity 0.3s;
-}
-.ks-scroll-to-top:hover {
-  opacity: 1;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
 .hover-background {
   padding: 0 4px;
   &:hover {
-    background-color: #f0f0f0; /* Light grey */
+    background-color: #f0f0f0;
     border-radius: 3px;
   }
-}
-
-.page-line {
-  font-size: 0.75rem;
-  font-weight: normal;
-  color: var(--color-dark-grey);
 }
 
 // TODO (same for ks-meta-page): before and after chars are not usable in browser search
@@ -81,12 +45,6 @@ ks-meta-fnref {
   position: relative;
   top: -0.2em;
   color: var(--color-dark-grey);
-  &::before {
-    content: "(";
-  }
-  &::after {
-    content: ")";
-  }
 }
 ks-meta-line {
   display: none;
@@ -95,12 +53,6 @@ ks-meta-page {
   font-size: 0.75rem;
   font-weight: normal;
   color: var(--color-dark-grey);
-  &::before {
-    content: "[";
-  }
-  &::after {
-    content: "]";
-  }
 }
 ks-meta-hit {
   font-weight: bold;
