extract state management to new criteria store

--- a/src/app/read/selection/selection.component.html
+++ b/src/app/read/selection/selection.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isLoaded$ | async">
+<ng-container *ngIf="ready$ | async">
   <nz-space nzDirection="vertical" class="w-full">
     <div *nzSpaceItem></div>
 
