extract node building from component to store

--- a/src/app/read/text/toc/section/section.component.html
+++ b/src/app/read/text/toc/section/section.component.html
@@ -7,12 +7,12 @@
     nz-flex
     nzJustify="space-between"
   >
-    {{ getHeading(section?.heading).tocText }}
+    {{ getHeading(section?.heading)?.tocText }}
 
     <span style="width: 30px"></span>
 
     <div style="white-space: nowrap">
-      {{ getHeading(section?.heading).pages[0] }}
+      {{ getHeading(section?.heading)?.pages?.at(0) }}
     </div>
   </div>
 </div>
