--- a/src/app/search/criteria/advanced-input/left-labeled-input/left-labeled-input.component.html
+++ b/src/app/search/criteria/advanced-input/left-labeled-input/left-labeled-input.component.html
@@ -1,5 +1,5 @@
 <div nz-row>
-  <div nz-col nzSpan="4">
+  <div nz-col nzSpan="4" style="margin-top: 0.35em">
     <label for="{{ idString }}">
       {{ i18nString + ".LABEL" | translate }}
     </label>
