add table styles

--- a/src/styles.less
+++ b/src/styles.less
@@ -138,6 +138,18 @@ ks-fmt-name {
   font-family: "Georgia", serif;
   letter-spacing: 0.03em;
 }
+table {
+  width: 100%;
+}
+tr {
+  display: table-row;
+  border: 1px solid gray;
+}
+td {
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid gray;
+}
 ks-fmt-tracked {
   letter-spacing: 0.1em;
 }
