--- a/src/app/read/text/work-info/work-info.component.html
+++ b/src/app/read/text/work-info/work-info.component.html
@@ -46,9 +46,7 @@
   <div *nzSpaceItem nz-row>
     {{ "READ.INFO.KORPORA_LINK" | translate }}:&nbsp;
     <a
-      href="https://korpora.org/kant/aa{{
-        geWithLeadingZeros(work.volumeNumber, 2)
-      }}/"
+      href="{{ config.korporaUrl }}/aa{{ geWithLeadingZeros(work.volumeNumber) }}/"
       target="_blank"
     >
       korpora.org &#x29c9;
