--- a/src/app/search/criteria/criteria.component.html
+++ b/src/app/search/criteria/criteria.component.html
@@ -4,7 +4,7 @@
       *nzSpaceItem
       [nodes]="(nodes$ | async) ?? []"
       [canSearch]="(canSearch$ | async) ?? false"
-      [config]="(config$ | async) ?? { korporaUrl: '', workGroups: [] }"
+      [workGroups]="(workGroups$ | async) ?? []"
       (searchTermsEmitter)="onSearchTermsChange($event)"
       (workCodesEmitter)="onWorkCodesChange($event)"
       (doSearchEmitter)="onSearch()"
