--- a/src/app/search/criteria/basic-input/basic-input.component.html
+++ b/src/app/search/criteria/basic-input/basic-input.component.html
@@ -62,7 +62,7 @@
     nzPlacement="bottomRight"
     nzAllowClear="true"
     [nzPlaceHolder]="'SEARCH.INPUT.WORKS.SELECT.PLACEHOLDER' | translate"
-    [ngModel]="workGroup"
+    [ngModel]="group"
     (ngModelChange)="onSelectChange($event)"
     [disabled]="nodes.length === 0"
   >
