--- a/src/styles.less
+++ b/src/styles.less
@@ -10,9 +10,15 @@ body {
 .w-full {
   width: 100%;
 }
-.min-w-400 {
+.min-w-250 {
+  // TODO move to local less file
   width: 100%;
-  min-width: 400px;
+  min-width: 250px;
+}
+.max-w-400 {
+  // TODO move to local less file
+  width: 100%;
+  max-width: 400px;
 }
 .max-w-base {
   width: 100%;
