--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ks-navbar *nzSpaceItem></ks-navbar>
 
   <div *nzSpaceItem nz-flex nzJustify="center">
-    <div class="max-w-base">
+    <div class="max-w-base side-padding">
       <router-outlet></router-outlet>
     </div>
   </div>
